--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,16 @@
-    fruits list:
-    apple
-    Hello world
-    orange
-    pomelo
-    
-    Lorem ipsum generator: https://www.lipsum.com/
+   
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <title>Jennifer Bonilla's Lab 1</title>
+        <h1>Jennifer Bonilla's Lab 1</h1>
+      </head>
+      <body>
+        <img src="https://i.pinimg.com/originals/25/bc/6a/25bc6afe3bca12c8e94c5e39e88641c4.jpg" alt="My test image">
+        <ul> 
+            <li>pomelo</li>
+            <li>apple</li>
+            <li>Orange</li>
+          </ul>
+      </body>
+    </html>
