--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -25,7 +25,7 @@
         
       </ul>
 
-        <li><button id="submit button" name="submit button" type="submit">Submit Form</button></li>
+        <li><button id="submit" name="submit button" type="submit">Submit Form</button></li>
       </li>
   
 
