--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jennifer Bonilla - Lab 4</title>
+    <title>Jennifer Bonilla - Lab 5</title>
     <link rel="stylesheet" href="styles.css">
-    <h1>Jennifer Bonilla's Lab 4</h1>
+    <h1>Lab 5 for Jennifer Bonilla</h1>
   </head> 
   <body>
   <form action="/api" method="post">
@@ -25,7 +25,9 @@
         
       </ul>
 
-        <li><button id="submit" name="submit button" type="submit">Submit Form</button></li>
+      <li>
+        <button id="submit" name="submit button" type="submit">Submit Form</button>
+        <button id="activate" name="activate button" type="button">Activate</button>
       </li>
   
 
