--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jennifer Bonilla - Lab 5</title>
+    <title>Lab 5 for Jennifer Bonilla</title>
     <link rel="stylesheet" href="styles.css">
     <h1>Lab 5 for Jennifer Bonilla</h1>
   </head> 
@@ -27,7 +27,7 @@
 
       <li>
         <button id="submit" name="submit button" type="submit">Submit Form</button>
-        <button id="activate" name="activate button" type="button">Activate</button>
+        <button id="activate" name="activate button" type="button" onclick="javascript">Activate</button>
       </li>
   
 
