--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -51,8 +51,8 @@
          document.querySelector(".flex-outer").style.margin = "0 auto";
          
 
-        var x = document.querySelectorAll('p.checkbox-list-label,.flex-inner label');
-         var fruits = ["Fruits", "pineapple", "banana", "cherry"];
+        const x = document.querySelectorAll('p.checkbox-list-label,.flex-inner label');
+        const fruits = ["Fruits", "pineapple", "banana", "cherry"];
          
          for (i = 0; i < fruits.length; i++) {
           x[i].innerHTML = fruits[i];
