--- a/public/answer_key/lab_6/index.html
+++ b/public/answer_key/lab_6/index.html
@@ -4,10 +4,7 @@
     <title>Alex Leitch's Lab 6</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-      crossorigin="anonymous"
-    ></script>
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
