--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -17,6 +17,8 @@
         crossorigin="anonymous"></script>
     </head>
     <body>
+        <title>JPlaces To Eat Out In Future</title>
+
         <div class="header">
             <h1>Jennifer Bonilla</h1>
         </div>
@@ -33,12 +35,15 @@
         </div>
 
         <div class="flex-outer" >
+        <form>   
             <button type="submit" class="submitButton" name="submitButton">Submit</button>
+        </form>
+
         </div>
 
-
+    
         <script src="canvasjs.min.js"></script>
         <script src="script.js"></script>
-
+    
     </body>
 </html>
