--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -25,7 +25,7 @@
         <div class="wrapper">
             <div class="container">
 
-                <div class="target" id="chartContainer">
+                <div id="chartContainer">
 
                 </div>
 
