--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -23,7 +23,7 @@
         </div>
         
         <div class="wrapper">
-            <div class="container">
+            <div class="container" class="flex-outer">
 
                 <div id="chartContainer">
 
@@ -32,11 +32,11 @@
 
 
         <div class="flex-outer" >
-            <form>   
-                <button type="submit" class="submitButton" name="submitButton">Submit</button>
-            </form>
-    
-            </div>
+        <form>   
+            <button type="submit" class="submitButton" name="submitButton">Submit</button>
+        </form>
+
+        </div>
 
             </div>
         </div>
